--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
 	<div class="mainContainer" data-ng-app="MyApp">
 		<div data-ng-controller="MainCtrl">
-			<h1>AngularJS Tutorial - Binding</h1>
+			<h1>saeed shokoohi</h1>
 
 			<input type="text" data-ng-model="data.label">
 
