--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,73 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>AccioCode AngularJS Tutorial - Binding</title>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
-	<script src="resources/js/angularjstutorial-deps.js"></script>
-	<script src="resources/js/angularjstutorial.js"></script>
+    <title>AccioCode AngularJS Tutorial - Binding</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 
-	<link rel="stylesheet" href="resources/css/angularjstutorial.css">
 </head>
 <body>
 
-	<div class="mainContainer" data-ng-app="MyApp">
-		<div data-ng-controller="MainCtrl">
-			<h1>saeed shokoohi</h1>
+<div class="mainContainer" data-ng-app="MyApp">
+    <div data-ng-controller="MainCtrl">
+        <h1>Work Flow Model Designer</h1>
+<div class="wf_panel wf_mainpanel">
+        <div class="wf_panel wf_toolbar">
+          <div class="wf_inititem">
+              <svg class="wf_svg_inititem">
+                  <rect y="15" height="50" width="120" fill="#8c8c8c" ></rect>
+              </svg>
+          </div>
+            <div class="wf_inititem">
+                <svg class="wf_svg_inititem">
+                    <circle r="20" cx="40" cy="40"/>
+                </svg>
+            </div>
+            <div class="wf_inititem">
+                <svg class="wf_svg_inititem">
+                    <circle r="20" cx="40" cy="40"/>
+                    <circle r="15" cx="40" cy="40" fill="#ffffff"/>
+                </svg>
+            </div>
+            <div class="wf_inititem">
+                <svg class="wf_svg_inititem">
+                <polygon points="40,10,60,40,40,70,20,40"  fill="#8c8c8c" />
+                </svg>
+            </div>
+            <div class="wf_inititem"></div>
 
-			<input type="text" data-ng-model="data.label">
+        </div>
+        <div class="wf_panel wf_designbox" >
 
-			<input class="btn" type="text" data-ng-model="data.class">
-            <saeed-sh>kjhjsdh</saeed-sh>
-			<button ng-click="refreshData()" class="btn {{data.class}}">{{data.label}}</button>
-		</div>
-	</div>
+            <div id="flowchart-demo" class="flowchart-demo"
+                 style="width:600px; height:500px; ">
+                <div id="first" class="window">
+                    <!--   <svg >
+                              <rect height="100" width="100" fill="yellow"></rect>
+                          </svg>-->
+                </div>
 
+                <div id="second" class="window">
+                    <!-- <svg >
+                         <rect height="100" width="100" fill="red"></rect>
+                     </svg>-->
+                </div>
+
+
+            </div>
+
+        </div>
+</div>
+
+    </div>
+</div>
+
+
+<script src="resources/js/wf_modeler-deps.js"></script>
+<script src="resources/js/wf_modeler.js"></script>
+
+<link rel="stylesheet" href="resources/css/wf_modeler.css">
 </body>
+
 </html>
