--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,23 @@
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, user-scalable=no">
 
+
 </head>
 <body>
 
-<div class="mainContainer" data-ng-app="MyApp">
-    <div data-ng-controller="MainCtrl">
-        <h1>Work Flow Model Designer</h1>
-<div class="wf_panel wf_mainpanel">
+<div class="mainContainer" ng-app="modeler_module">
+    <div ng-controller="modeler_ctrl">
+        <h1>Work Flow Model Designer for {{process}}</h1>
+<div id="designBox" class="wf_panel wf_mainpanel">
         <div class="wf_panel wf_toolbar">
-          <div class="wf_inititem">
+            <my-dialog>here</my-dialog>
+            <ng-model-item type="state" ></ng-model-item>
+        <!--  <div class="wf_inititem" ng-model-item="state" ng-container="designBox">
               <svg class="wf_svg_inititem">
                   <rect y="15" height="50" width="120" fill="#8c8c8c" ></rect>
               </svg>
-          </div>
-            <div class="wf_inititem">
+          </div>-->
+            <div class="wf_inititem"  ng-model-item="hdgh">
                 <svg class="wf_svg_inititem">
                     <circle r="20" cx="40" cy="40"/>
                 </svg>
@@ -63,11 +66,10 @@
     </div>
 </div>
 
-
 <script src="resources/js/wf_modeler-deps.js"></script>
 <script src="resources/js/wf_modeler.js"></script>
-
 <link rel="stylesheet" href="resources/css/wf_modeler.css">
+
 </body>
 
 </html>
