--- a/src/resources/js/partial_view/modeler_item_state.html
+++ b/src/resources/js/partial_view/modeler_item_state.html
@@ -1,7 +1,11 @@
-
+<div>
 <!--state html design-->
-<div class="wf_inititem" ng-model-item="state" ng-container="designBox">
+
+<div   >
     <svg class="wf_svg_inititem">
         <rect y="15" height="50" width="120" fill="#8c8c8c" ></rect>
     </svg>
 </div>
+
+</div>
+
